# reaction-diffusion

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.org  cmake_install.cmake  hand-tuned-vs-compiler-tuned.txt  reaction-diffusion
include/: buffer.h  display.h
src/: buffer.cpp  display.cpp  laplace.nasm  main.cpp
